# recoder

./: Cargo.toml  LICENSE  README.md  index.html  index.scss  manifest.json  service-worker.js
src/: app.rs  encoding_decoding.rs  main.rs  textarea.rs
src/components/: hashing.rs  header.rs  mod.rs  text_encoding.rs  text_input.rs  textarea.rs
src/engine/: crypto.rs  encoding.rs  mod.rs
