[package]
name = "recode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.19.3" }
js-sys = "0.3.46"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
wasm-bindgen = "0.2"
base64 = "0.13.0"
urlencoding = "2.1.0"
hex = "0.4.3"
html-escape = "0.2.11"
