[package]
name = "recoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Framework and UI
yew = { version = "0.20.0", features = ["csr"] }
yew_icons = { version = "0.7.0", features = ["FeatherCopy"] }
# WASM
js-sys = "0.3.46"
web-sys = { version = "0.3", features = ["Event", "EventTarget", "InputEvent"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.31"
# Encoding/hashing
base64 = "0.13.0"
urlencoding = "2.1.0"
hex = "0.4.3"
html-escape = "0.2.11"
hmac = "0.12.1"
sha1 = "0.10.1"
sha2 = "0.10.2"
sha3 = "0.10.1"
md5 = "0.7.0"
blake2 = "0.10.4"
